Initial logic for adding professional experience by creating object for each company. Currently has bug of updating state too frequently leading to stretched array for tasks

--- a/cv-builder/src/styling/Experience.css
+++ b/cv-builder/src/styling/Experience.css
@@ -75,6 +75,6 @@ legend {
     cursor: pointer;
 }
 
-.btn-container button:first-child {
-    margin-right: 25px;
+.btn-container button:nth-child(2) {
+    margin: 0px 25px;
 }
